--- a/client/package.json
+++ b/client/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.3",
-    "@testing-library/user-event": "^7.1.2",
+    "immer": "^5.0.1",
+    "lodash": "^4.17.15",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-jss": "^10.0.0",
     "react-scripts": "3.3.0",
-    "react-select": "^3.0.8"
+    "react-select": "^3.0.8",
+    "use-force-update": "^1.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
